--- a/application/build.gradle
+++ b/application/build.gradle
@@ -17,6 +17,7 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenLocal()
 }
 
 dependencies {
@@ -24,7 +25,7 @@ dependencies {
     compile 'com.google.guava:guava:20.0'
     
     //Antidote java client library
-    compile group: 'eu.antidotedb', name: 'antidote-java-client', version: '0.0.5'
+    compile group: 'eu.antidotedb', name: 'antidote-java-client', version: '0.1.0-SNAPSHOT'
     
     //for command line shell
     compile files("lib/asg.cliche-110413.jar")
